# metabase_query_checker

./: .env.example  .gitignore  README.md  pyproject.toml  script_check_faulty_questions.py
metabase_query_checker/: collection_graph.py  main.py  rocketchat_manager.py  settings-example.py
